apps/explo/httproute.yaml
# Replace the hostname before reconciling if you want public browser access to Explo.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: explo-route
spec:
    parentRefs:
        - name: gatewayapi
          namespace: traefik
          sectionName: https
    hostnames:
        - ENC[AES256_GCM,data:VhWvFvXX/WyqRd26plaz,iv:wxyZJ01Gxk9n6GYxWib0OXCqswCpLlp9+AXMbGX9avI=,tag:K0kdXijaf+47mkaKhua3Ow==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: default-headers
          backendRefs:
            - name: explo
              port: 7288
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZd0RDUHRkaHNXbHFoc3dG
[...]
            mo9I4H3QsoPVnpo6Q9pT6spqrEWIlDExriHlOK1v47F17/tyvPCTqQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age149cx2m4rwfw6argx9fam62vjtcjgeuepd78ej8f0mcpatdgxdqfslqu454
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-09-25T14:37:40Z"
    mac: ENC[AES256_GCM,data:61zloXdSnR5Jyf/9w+jm4eADE8LQEYWdy+rGUFoyhaICs1t4YjrN9hjho8Z98sXAiATctbhIHDF/YbJXvyQFwIEc21etqNi3U9iM78LzEHQoneBxvsJwphf7dM/2v/+sKHcWTux+y3SjXYzDfTQ8ar3dlQo5V+pYcuvbCqsZQgk=,iv:44bCu49GXFyoSvh7GVh9/HOIEy9Gjh8aReKNk9TZ/uc=,tag:hIHAdGDAihA4CqvosIdpSg==,type:str]
    version: 3.13.3
